tests/ui/error-codes/E0565.stderr
error[E0565]: malformed `repr` attribute input
  --> $DIR/E0565.rs:2:1
   |
LL | #[repr("C")]
   | ^^^^^^^---^^
   |        |
   |        expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
